kfreebsd-6 (6.1-2) UNRELEASED; urgency=low

  * Remove kldutils from the dependencies alternatives.
  * Remove kfreebsd-common from the dependencies not that module-init-tools
    does the job, and bump the dependency on module-init-tools to (>= 6.1-6).

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 12 Dec 2006 15:43:24 +0100

kfreebsd-6 (6.1-1) unreleased; urgency=low

  * Urgency set to high as this fixes a security bug.
  * Fix a memory disclosure in firewire (FreeBSD-SA-06:25.kmem
    / CVE-2006-6013).

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 11 Dec 2006 11:34:26 +0100

kfreebsd-6 (6.1-0.4) unreleased; urgency=low

  * Backport the NVIDIA nForce MCP Ethernet driver from FREEBSD-7.0.

 -- Aurelien Jarno <aurel32@debian.org>  Fri,  3 Nov 2006 18:23:17 +0100

kfreebsd-6 (6.1-0.3) unreleased; urgency=low

  * Relax the conflict with kfreebsd-loader to (<< 5.4-1.3). 

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 12 Oct 2006 16:19:38 +0200

kfreebsd-6 (6.1-0.2) unreleased; urgency=low

  [ Aurelien Jarno ]
  * patches/999_config.diff: remove COMPAT_LINUX from amd64.
  * Make the images conflict with kfreebsd-loader (<< 5.4-3).

  [ Petr Salinger ]
  * Fix buffer overflow in sppp (FreeBSD-SA-06:08.ppp / CVE-2006-4304).
  * Fix networking issues (FreeBSD-EN-06:02.net).

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 10 Oct 2006 11:47:04 +0200

kfreebsd-6 (6.1-0.1) unreleased; urgency=low

  [ Petr Salinger ]
  * New upstream version (RELENG_6_1_0_RELEASE)
     - drop 000_* patches (already in upstream)
     - rework 010_ET_DYN.diff
     - update remaining patches (with great help from quilt)
     - add 018_genassym_MAXCPU.diff
  * Fix smbfs chroot escape (FreeBSD-SA-06:16.smbfs / CVE-2006-2654).
  * Re-enable hwpmc driver
  * Disable non-free "rr232x" driver - another Highpoint RocketRAID
  * Do not load directly executed shared library (e.g. ld.so) at base addr 0

  [ Aurelien Jarno ]
  * Bumped Standards-Version to 3.7.2 (no changes). 
